# AudioEngine

./: CMakeLists.txt  README.md
src/audioengine/: AudioMaster.cpp  AudioMaster.h  Source.cpp  Source.h  audioengine.h
src/foundations/: Camera.cpp  Camera.h  Component.cpp  Component.h  Entity.cpp  Entity.h  Environment.cpp  Environment.h  Foundations.cpp  Foundations.h  Input.cpp  Input.h  MeshRenderer.cpp  MeshRenderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  Window.cpp  Window.h  fundamentals.h
src/game/: Player.cpp  Player.h  Snake.cpp  Snake.h  main.cpp
